--- a/src/main/webapp/swagger/css/screen.css
+++ b/src/main/webapp/swagger/css/screen.css
@@ -126,9 +126,9 @@ table {
 .swagger-ui-wrap {
   line-height: 1;
   font-family: "Droid Sans", sans-serif;
-  max-width: 960px;
-  margin-left: auto;
-  margin-right: auto;
+  /*max-width: 1024px;*/
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .swagger-ui-wrap b,
 .swagger-ui-wrap strong {
